--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1390,6 +1390,420 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaling\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "\n",
+    "# Train Test Split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Models\n",
+    "# import torch\n",
+    "# import torch.nn as nn\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "# Metrics\n",
+    "from sklearn.metrics import accuracy_score, classification_report, roc_curve\n",
+    "\n",
+    "# Cross Validation\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first 5 rows of X are\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>trtbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>normalized_chol</th>\n",
+       "      <th>sex_1</th>\n",
+       "      <th>exng_1</th>\n",
+       "      <th>ca_1</th>\n",
+       "      <th>ca_2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cp_2</th>\n",
+       "      <th>cp_3</th>\n",
+       "      <th>fbs_1</th>\n",
+       "      <th>restecg_1</th>\n",
+       "      <th>restecg_2</th>\n",
+       "      <th>slp_1</th>\n",
+       "      <th>slp_2</th>\n",
+       "      <th>thall_1</th>\n",
+       "      <th>thall_2</th>\n",
+       "      <th>thall_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.576923</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>-0.117647</td>\n",
+       "      <td>-0.076336</td>\n",
+       "      <td>0.9375</td>\n",
+       "      <td>0.244292</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.423077</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.149020</td>\n",
+       "      <td>1.053435</td>\n",
+       "      <td>1.6875</td>\n",
+       "      <td>0.283105</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.115385</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.572549</td>\n",
+       "      <td>0.595420</td>\n",
+       "      <td>0.3750</td>\n",
+       "      <td>0.178082</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.038462</td>\n",
+       "      <td>-0.50</td>\n",
+       "      <td>-0.070588</td>\n",
+       "      <td>0.778626</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.251142</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.115385</td>\n",
+       "      <td>-0.50</td>\n",
+       "      <td>1.780392</td>\n",
+       "      <td>0.320611</td>\n",
+       "      <td>-0.1250</td>\n",
+       "      <td>0.520548</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        age  trtbps      chol   thalach  oldpeak  normalized_chol  sex_1  \\\n",
+       "0  0.576923    0.75 -0.117647 -0.076336   0.9375         0.244292      1   \n",
+       "1 -1.423077    0.00  0.149020  1.053435   1.6875         0.283105      1   \n",
+       "2 -1.115385    0.00 -0.572549  0.595420   0.3750         0.178082      0   \n",
+       "3  0.038462   -0.50 -0.070588  0.778626   0.0000         0.251142      1   \n",
+       "4  0.115385   -0.50  1.780392  0.320611  -0.1250         0.520548      0   \n",
+       "\n",
+       "   exng_1  ca_1  ca_2  ...  cp_2  cp_3  fbs_1  restecg_1  restecg_2  slp_1  \\\n",
+       "0       0     0     0  ...     0     1      1          0          0      0   \n",
+       "1       0     0     0  ...     1     0      0          1          0      0   \n",
+       "2       0     0     0  ...     0     0      0          0          0      0   \n",
+       "3       0     0     0  ...     0     0      0          1          0      0   \n",
+       "4       1     0     0  ...     0     0      0          1          0      0   \n",
+       "\n",
+       "   slp_2  thall_1  thall_2  thall_3  \n",
+       "0      0        1        0        0  \n",
+       "1      0        0        1        0  \n",
+       "2      1        0        1        0  \n",
+       "3      1        0        1        0  \n",
+       "4      1        0        1        0  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a copy of df\n",
+    "df1 = df\n",
+    "\n",
+    "# define the columns to be encoded and scaled\n",
+    "cat_cols = ['sex','exng','ca','cp','fbs','restecg','slp','thall']\n",
+    "con_cols = [\"age\",\"trtbps\",\"chol\",\"thalach\",\"oldpeak\"]\n",
+    "\n",
+    "# encoding the categorical columns\n",
+    "df1 = pd.get_dummies(df1, columns = cat_cols, drop_first = True)\n",
+    "\n",
+    "# defining the features and target\n",
+    "X = df1.drop(['output'],axis=1)\n",
+    "y = df1[['output']]\n",
+    "\n",
+    "# instantiating the scaler\n",
+    "scaler = RobustScaler()\n",
+    "\n",
+    "# scaling the continuous featuree\n",
+    "X[con_cols] = scaler.fit_transform(X[con_cols])\n",
+    "print(\"The first 5 rows of X are\")\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of X_train is       (241, 23)\n",
+      "The shape of X_test is        (61, 23)\n",
+      "The shape of y_train is       (241, 1)\n",
+      "The shape of y_test is        (61, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.2, random_state = 42)\n",
+    "print(\"The shape of X_train is      \", X_train.shape)\n",
+    "print(\"The shape of X_test is       \",X_test.shape)\n",
+    "print(\"The shape of y_train is      \",y_train.shape)\n",
+    "print(\"The shape of y_test is       \",y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The test accuracy score of SVM is  0.8360655737704918\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instantiating the object and fitting\n",
+    "clf = SVC(kernel='linear', C=1, random_state=42).fit(X_train,y_train)\n",
+    "\n",
+    "# predicting the values\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "# printing the test accuracy\n",
+    "print(\"The test accuracy score of SVM is \", accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best params are : {'C': 6, 'gamma': 0.05}\n",
+      "The best score is   : 0.8586734693877551\n",
+      "The test accuracy score of SVM after hyper-parameter tuning is  0.8852459016393442\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instantiating the object\n",
+    "svm = SVC()\n",
+    "\n",
+    "# setting a grid - not so extensive\n",
+    "parameters = {\"C\":np.arange(1,10,1),'gamma':[0.00001,0.00005, 0.0001,0.0005,0.001,0.005,0.01,0.05,0.1,0.5,1,5]}\n",
+    "\n",
+    "# instantiating the GridSearchCV object\n",
+    "searcher = GridSearchCV(svm, parameters)\n",
+    "\n",
+    "# fitting the object\n",
+    "searcher.fit(X_train, y_train)\n",
+    "\n",
+    "# the scores\n",
+    "print(\"The best params are :\", searcher.best_params_)\n",
+    "print(\"The best score is   :\", searcher.best_score_)\n",
+    "\n",
+    "# predicting the values\n",
+    "y_pred = searcher.predict(X_test)\n",
+    "\n",
+    "# printing the test accuracy\n",
+    "print(\"The test accuracy score of SVM after hyper-parameter tuning is \", accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The test accuracy score of Logistric Regression is  0.9016393442622951\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instantiating the object\n",
+    "logreg = LogisticRegression()\n",
+    "\n",
+    "# fitting the object\n",
+    "logreg.fit(X_train, y_train)\n",
+    "\n",
+    "# calculating the probabilities\n",
+    "y_pred_proba = logreg.predict_proba(X_test)\n",
+    "\n",
+    "# finding the predicted valued\n",
+    "y_pred = np.argmax(y_pred_proba,axis=1)\n",
+    "\n",
+    "# printing the test accuracy\n",
+    "print(\"The test accuracy score of Logistric Regression is \", accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The test accuracy score of Gradient Boosting Classifier is  0.8524590163934426\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instantiate the classifier\n",
+    "gbt = GradientBoostingClassifier(n_estimators = 300,max_depth=1,subsample=0.8,max_features=0.2,random_state=42)\n",
+    "\n",
+    "# fitting the model\n",
+    "gbt.fit(X_train,y_train)\n",
+    "\n",
+    "# predicting values\n",
+    "y_pred = gbt.predict(X_test)\n",
+    "print(\"The test accuracy score of Gradient Boosting Classifier is \", accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Central Tendency\n",
     "It is measured using 3M's that is mean, median and mode.\n",
     "\n",
