--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1379,7 +1379,7 @@
     "<ul>\n",
     "<li>People with Non-Anginal chest pain, that is with cp = 2 have higher chances of heart attack.</li>\n",
     "<li>People with 0 major vessels, that is with caa = 0 have high chance of heart attack.</li>\n",
-    "<li>People with sex = 1 (male) have higher chance of heart attack.</li>\n",
+    "<li>People with sex = 1 (male) have higher chance of heart attack disease.</li>\n",
     "<li>People with thall = 2 have much higher chance of heart attack.</li>\n",
     "<li>People with no exercise induced angina, that is with exng = 0 have higher chance of heart attack.</li>\n",
     "<ul>\n",
